[tool.poetry]
name = "dmzj-news"
version = "0.1.0"
description = ""
authors = ["drowning-in-codes <bukalala174@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
rich = "^13.6.0"
markdownify = "^0.11.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
